[feat] minor fixes
