# docs/swagger.json
@@ -293,7 +293,7 @@
                 "audio_length",
                 "email",
                 "file_link",
-                "language"
+                "languages"
             ],
             "properties": {
                 "audio_length": {
@@ -308,10 +308,15 @@
                     "type": "string",
                     "example": "https://www.emaple.com/file"
                 },
-                "language": {
+                "languages": {
                     "description": "TODO: Add support for dubbing multiple languages at the same time",
-                    "type": "string",
-                    "example": "hindi|telugu|marathi|bengali|tamil"
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "hindi|telugu|marathi|bengali|tamil"
+                    ]
                 }
             }
         },
